--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -514,6 +514,7 @@
 	<item component="ComponentInfo{ca.toronto.torontowastewizard/ca.toronto.torontowastewizard.presentation.start.SplashActivity}" drawable="towaste" />
 	<item component="ComponentInfo{ca.tsn.mobile.android/ca.tsn.mobile.android.startup.activity.StartupActivity}" drawable="tsn" />
 	<item component="ComponentInfo{ca.virginmobile.myaccount.virginmobile/ca.virginmobile.myaccount.virginmobile.ui.splash.view.SplashActivity}" drawable="virgin_plus_my_account" />
+	<item component="ComponentInfo{ca.walmart.ecommerceapp/com.walmart.glass.integration.splash.SplashActivity}" drawable="walmart" />
 	<item component="ComponentInfo{calculator.com.j1.calculator/calculator.com.j1.calculator.Activity.MainActivity}" drawable="calculator" />
 	<item component="ComponentInfo{canvasm.myo2/canvasm.myo2.SplashActivity}" drawable="mein_o2" />
 	<item component="ComponentInfo{capitec.acuity.mobile.prod/capitec.acuity.mobile.prod.MainActivity}" drawable="capitec_bank" />
@@ -541,6 +542,7 @@
 	<item component="ComponentInfo{ch.abertschi.adfree/ch.abertschi.adfree.view.MainActivity}" drawable="ad_free" />
 	<item component="ComponentInfo{ch.abertschi.waterme.water_me/ch.abertschi.waterme.water_me.MainActivity}" drawable="water_me" />
 	<item component="ComponentInfo{ch.aboutlucerne.notenrechner/ch.aboutlucerne.notenrechner.ui.MainActivity}" drawable="noten_rechner" />
+	<item component="ComponentInfo{ch.aorlinn.bridges/ch.aorlinn.bridges.view.MainMenuActivity}" drawable="hashi_bridges" />
 	<item component="ComponentInfo{ch.aorlinn.bridges/ch.aorlinn.puzzle.view.SplashScreenActivity}" drawable="hashi_bridges" />
 	<item component="ComponentInfo{ch.bailu.aat/ch.bailu.aat.activities.MainActivity}" drawable="aat" />
 	<item component="ComponentInfo{ch.bibellesebund.bibleenergy/ch.bibellesebund.bibleenergy.MainActivity}" drawable="bible_energy" />
@@ -4984,6 +4986,7 @@
 	<item component="ComponentInfo{com.mercariapp.mercari/com.mercari.denali.MainActivity}" drawable="mercari" />
 	<item component="ComponentInfo{com.mercariapp.mercari/com.mercari.ramen.launch.LaunchActivity}" drawable="mercari" />
 	<item component="ComponentInfo{com.mercariapp.mercari/com.mercari.ramen.LaunchActivity}" drawable="mercari" />
+	<item component="ComponentInfo{com.merkuryinnovations.geeni/com.smart.ThingSplashActivity}" drawable="geeni" />
 	<item component="ComponentInfo{com.merkuryinnovations.geeni/com.smart.TuyaSplashActivity}" drawable="geeni" />
 	<item component="ComponentInfo{com.meross.meross/com.meross.meross.ui.start.FirstCheckActivity}" drawable="meross" />
 	<item component="ComponentInfo{com.merriamwebster.premium/com.merriamwebster.dictionary.activity.dictionary.DictionaryActivity}" drawable="merriam_webster" />
@@ -5477,6 +5480,7 @@
 	<item component="ComponentInfo{com.nextbillion.groww/com.nextbillion.groww.genesys.loginsignup.activities.LoginActivity}" drawable="groww" />
 	<item component="ComponentInfo{com.nextbus.mobile/com.nextbus.mobile.ui.MainActivity}" drawable="nextbus" />
 	<item component="ComponentInfo{com.nextcloud.android.beta/com.owncloud.android.ui.activity.FileDisplayActivity}" drawable="nextcloud" />
+	<item component="ComponentInfo{com.nextcloud.client/com.nmc.android.ui.LauncherActivity}" drawable="nextcloud" />
 	<item component="ComponentInfo{com.nextcloud.client/com.owncloud.android.ui.activity.FileDisplayActivity}" drawable="nextcloud" />
 	<item component="ComponentInfo{com.nextcloud.talk2/com.nextcloud.talk.activities.MainActivity}" drawable="nextcloud_talk" />
 	<item component="ComponentInfo{com.nextcloud_cookbook_flutter/com.nextcloud_cookbook_flutter.MainActivity}" drawable="nextcloud_cookbook" />
@@ -5587,6 +5591,8 @@
 	<item component="ComponentInfo{com.noodlecake.gettingoverit/com.unity3d.player.UnityPlayerActivity}" drawable="getting_over_it" />
 	<item component="ComponentInfo{com.noodlecake.happyjump/com.noodlecake.happyjump.android.HappyJump}" drawable="happy_jump" />
 	<item component="ComponentInfo{com.noodlecake.reallybadchess/com.izaron.androideffects.vibration.MyMainActivity}" drawable="really_bad_chess" />
+	<item component="ComponentInfo{com.noodlecake.reallybadchess/com.unity3d.player.UnityPlayerActivity}" drawable="really_bad_chess" />
+<item component="ComponentInfo{com.noodlecake.reallybadchess/com.prime31.UnityPlayerNativeActivity}" drawable="really_bad_chess" />
 	<item component="ComponentInfo{com.noodlecake.waywardsouls/com.apportable.activity.VerdeActivity}" drawable="wayward_souls" />
 	<item component="ComponentInfo{com.nookazonapp/com.nookazonapp.MainActivity}" drawable="nookazon" />
 	<item component="ComponentInfo{com.noon.buyerapp/com.noon.buyerapp.MainActivity}" drawable="noon_shopping" />
@@ -8269,6 +8275,7 @@
 	<item component="ComponentInfo{com.tunerly/com.tunerly.MainActivity}" drawable="tunerly" />
 	<item component="ComponentInfo{com.tunityapp.tunityapp/com.tunityapp.tunityapp.loginfragments.LoginActivity}" drawable="tunity" />
 	<item component="ComponentInfo{com.tunnelbear.android/com.tunnelbear.android.main.SplashActivity}" drawable="tunnelbear" />
+	<item component="ComponentInfo{com.tunnelbear.android/com.tunnelbear.android.mvvmReDesign.NavGraphActivity}" drawable="tunnelbear" />
 	<item component="ComponentInfo{com.tunnelbear.android/com.tunnelbear.android.TbearSplashActivity}" drawable="tunnelbear" />
 	<item component="ComponentInfo{com.turbochilli.rollingsky/com.turbochilli.rollingsky.AppActivity}" drawable="rolling_sky" />
 	<item component="ComponentInfo{com.tureng.sozluk/com.tureng.sozluk.MainActivity}" drawable="tureng_dictionary" />
@@ -8870,6 +8877,7 @@
 	<item component="ComponentInfo{com.yik.yak/com.yik.yak.ui.activity.SplashActivity}" drawable="yik_yak" />
 	<item component="ComponentInfo{com.yirgalab.dzzz/com.yirgalab.dzzz.main.MainActivity}" drawable="doze" />
 	<item component="ComponentInfo{com.yocto.wenote/com.yocto.wenote.MainActivity}" drawable="quickmemo" />
+	<item component="ComponentInfo{com.yodo1.crossyroad/com.google.firebase.MessagingUnityPlayerActivity}" drawable="crossy_road" />
 	<item component="ComponentInfo{com.yodo1.crossyroad/com.hipsterwhale.hwutils.OverrideUnityActivity}" drawable="crossy_road" />
 	<item component="ComponentInfo{com.yodo1.roda/com.yodo1.android.sdk.view.Yodo1PermissionActivity}" drawable="rooms_of_doom" />
 	<item component="ComponentInfo{com.yoku.marumovie/com.movie.ui.activity.SplashActivity}" drawable="cinema_hd" />
