--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -4,6 +4,7 @@
 	<!--Please avoid automatically sorting categories to keep the current order in place-->
 
 	<category title="New" />
+	<item drawable="patreon" />
 	<item drawable="transit" />
 	<item drawable="transit_black" />
 	<item drawable="transit_blue" />
@@ -353,6 +354,7 @@
 	<item drawable="panera_bread_alt_1" />
 	<item drawable="passwordstore_alt_1" />
 	<item drawable="patreon_alt_1" />
+	<item drawable="patreon_alt_2" />
 	<item drawable="paymaya_alt_1" />
 	<item drawable="pdd_alt_1" />
 	<item drawable="peloton_alt_1" />
