--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -4,6 +4,7 @@
 	<!--Please avoid automatically sorting categories to keep the current order in place-->
 
 	<category title="New" />
+	<item drawable="_10_bit_clock_widget" />
 	<item drawable="patreon" />
 	<item drawable="transit" />
 	<item drawable="transit_black" />
