--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -3005,7 +3005,7 @@
 	<item component="ComponentInfo{com.fengiiley.frlegends/com.fengiiley.frlegends.UnityPlayerActivity}" drawable="fr_legends" />
 	<item component="ComponentInfo{com.feralinteractive.gridas/com.feralinteractive.gridas.MainActivity}" drawable="grid_autosport" />
 	<item component="ComponentInfo{com.feralinteractive.xcom2_android/com.feralinteractive.xcom2_android.MainActivity}" drawable="xcom_2" />
-	<item component="ComponentInfo{com.feresr.walpy/com.feresr.walpy.welcome.WelcomeActivity}" drawable="walpy" />
+	<item component="ComponentInfo{com.feresr.y/com.feresr.walpy.welcome.WelcomeActivity}" drawable="walpy" />
 	<item component="ComponentInfo{com.ferrari.scuderiaferrari/com.ferrari.scuderiaferrari.MainActivity}" drawable="scuderia_ferrari" />
 	<item component="ComponentInfo{com.ferrarid.converterpro/com.ferrarid.converterpro.MainActivity}" drawable="converter_now" />
 	<item component="ComponentInfo{com.fetchrewards.fetchrewards.hop/com.fetchrewards.fetchrewards.activities.SplashActivity}" drawable="fetch_rewards" />
@@ -5906,7 +5906,6 @@
 	<item component="ComponentInfo{com.philips.lighting.hue2/com.philips.lighting.hue2.ContentActivity}" drawable="philips_hue" />
 	<item component="ComponentInfo{com.phonepe.app/com.phonepe.app.v4.nativeapps.splash.Navigator_SplashActivity}" drawable="phone_pe" />
 	<item component="ComponentInfo{com.phonevalley.progressive/com.phonevalley.progressive.common.activities.SplashActivity}" drawable="progressive" />
-	<item component="ComponentInfo{com.phonewalls.stockwallpapers/com.phonewalls.stockwallpapers.MainActivity}" drawable="wallsplash" />
 	<item component="ComponentInfo{com.photo.android.camera/com.ijoysoft.cameratab.activity.SplashActivity}" drawable="camera" />
 	<item component="ComponentInfo{com.photo.gallery.photo.albums/com.photo.gallery.photo.albums.activity.SplashActivity1}" drawable="gallery" />
 	<item component="ComponentInfo{com.photocard.allstar/com.photocard.allstar.intro.view.IntroActivity}" drawable="fanplus" />
@@ -7627,8 +7626,6 @@
 	<item component="ComponentInfo{com.streamline.justtherecipe/com.streamline.justtherecipe.MainActivity}" drawable="just_the_recipe" />
 	<item component="ComponentInfo{com.streetwriters.notesnook/com.streetwriters.notesnook.MainActivity}" drawable="notesnook" />
 	<item component="ComponentInfo{com.stremio.one/com.stremio.MainActivity}" drawable="stremio" />
-	<item component="ComponentInfo{com.stresscodes.wallp/com.stresscodes.wallp.CustomSplashScreen}" drawable="wallsplash" />
-	<item component="ComponentInfo{com.stresscodes.wallp/com.stresscodes.wallp.SplashScreen}" drawable="wallsplash" />
 	<item component="ComponentInfo{com.stromming.planta/com.stromming.planta.start.views.StartActivity}" drawable="planta" />
 	<item component="ComponentInfo{com.stronglifts.app/com.stronglifts.app.ui.splash.SplashActivity}" drawable="stronglifts" />
 	<item component="ComponentInfo{com.struckd.game/com.unity3d.player.UnityPlayerActivity}" drawable="struckd" />
