add missing drawable lines

--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -35,6 +35,7 @@
 	<item drawable="transit_yellow" />
 
 	<category title="Alts" />
+	<item drawable="_10_bit_clock_widget_alt_1" />
 	<item drawable="_1password_alt_1" />
 	<item drawable="_4pda_alt_1" />
 	<item drawable="abi_a_robots_tale_alt_1" />
