fix typo in appfilter

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -3005,7 +3005,7 @@
 	<item component="ComponentInfo{com.fengiiley.frlegends/com.fengiiley.frlegends.UnityPlayerActivity}" drawable="fr_legends" />
 	<item component="ComponentInfo{com.feralinteractive.gridas/com.feralinteractive.gridas.MainActivity}" drawable="grid_autosport" />
 	<item component="ComponentInfo{com.feralinteractive.xcom2_android/com.feralinteractive.xcom2_android.MainActivity}" drawable="xcom_2" />
-	<item component="ComponentInfo{com.feresr.y/com.feresr.walpy.welcome.WelcomeActivity}" drawable="walpy" />
+	<item component="ComponentInfo{com.feresr.walpy/com.feresr.walpy.welcome.WelcomeActivity}" drawable="walpy" />
 	<item component="ComponentInfo{com.ferrari.scuderiaferrari/com.ferrari.scuderiaferrari.MainActivity}" drawable="scuderia_ferrari" />
 	<item component="ComponentInfo{com.ferrarid.converterpro/com.ferrarid.converterpro.MainActivity}" drawable="converter_now" />
 	<item component="ComponentInfo{com.fetchrewards.fetchrewards.hop/com.fetchrewards.fetchrewards.activities.SplashActivity}" drawable="fetch_rewards" />
