--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -4,6 +4,8 @@
 	<!--Please avoid automatically sorting categories to keep the current order in place-->
 
 	<category title="New" />
+	<item drawable="_10_bit_clock_widget" />
+	<item drawable="patreon" />
 	<item drawable="transit" />
 	<item drawable="transit_black" />
 	<item drawable="transit_blue" />
@@ -33,6 +35,7 @@
 	<item drawable="transit_yellow" />
 
 	<category title="Alts" />
+	<item drawable="_10_bit_clock_widget_alt_1" />
 	<item drawable="_1password_alt_1" />
 	<item drawable="_4pda_alt_1" />
 	<item drawable="abi_a_robots_tale_alt_1" />
@@ -353,6 +356,7 @@
 	<item drawable="panera_bread_alt_1" />
 	<item drawable="passwordstore_alt_1" />
 	<item drawable="patreon_alt_1" />
+	<item drawable="patreon_alt_2" />
 	<item drawable="paymaya_alt_1" />
 	<item drawable="pdd_alt_1" />
 	<item drawable="peloton_alt_1" />
