--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -12681,4 +12681,5 @@
 	<item component="ComponentInfo{com.apollotv/com.apollotv.MainActivity}" drawable="apollotv" />
 	<item component="ComponentInfo{io.muetsch.anchrandroid/io.muetsch.anchrandroid.MainActivity}" drawable="anchr" />
 	<item component="ComponentInfo{com.ace.shell.production/com.ace.shell.ui.launcher.LauncherActivity}" drawable="aaa_auto_club" />
+	<item component="ComponentInfo{com.sanmer.geomag/com.sanmer.geomag.ui.activity.MainActivity}" drawable="geomag" />
 </resources>
