--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -71,6 +71,7 @@
 	<item drawable="walp" />
 	<item drawable="waterydroid" />
 	<item drawable="wg_tunnel" />
+	<item drawable="geomag" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -227,6 +228,7 @@
 	<item drawable="funimationnow_alt_1" />
 	<item drawable="gamestop_alt_1" />
 	<item drawable="gardenscapes_alt_1" />
+	<item drawable="geomag_alt_1" />
 	<item drawable="geometric_weather_alt_1" />
 	<item drawable="gett_alt_1" />
 	<item drawable="github_alt_1" />
