--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -17,6 +17,7 @@
 	<item drawable="hdrezka" />
 	<item drawable="keyman" />
 	<item drawable="m3u_android" />
+	<item drawable="money_fellows_alt_1" />
 	<item drawable="multivnc" />
 	<item drawable="nevertoomanybooks" />
 	<item drawable="otp_helper" />
@@ -343,6 +344,7 @@
 	<item drawable="minerals_guide_plus_identifier_alt_1" />
 	<item drawable="mj_pdf_reader_alt_1" />
 	<item drawable="moelist_alt_1" />
+	<item drawable="money_fellows_alt_1" />
 	<item drawable="moshidon_nightly_alt_1" />
 	<item drawable="mulch_alt_1" />
 	<item drawable="mull_alt_1" />
