--- a/app/src/main/res/xml/contributors.xml
+++ b/app/src/main/res/xml/contributors.xml
@@ -311,6 +311,11 @@
         image="https://avatars.githubusercontent.com/u/59519298"
         link="https://github.com/YuXiang187" />
     <contributor
+        name="Maddie M"
+        contribution="Icons"
+        image="https://avatars.githubusercontent.com/u/55149813"
+        link="https://github.com/maddie-m" />
+    <contributor
         name="Arabi Ishaque"
         contribution="Testing"
         image=""
@@ -320,4 +325,5 @@
         contribution="Testing"
         image=""
         link="" />
+
 </resources>
