--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -73,6 +73,7 @@
 	<item drawable="waterydroid" />
 	<item drawable="wg_tunnel" />
 	<item drawable="geomag" />
+	<item drawable="stan_alt_1" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -825,6 +826,7 @@
 	<item drawable="sonic_the_hedgehog_alt_1" />
 	<item drawable="spotify_alt_1" />
 	<item drawable="spotube_alt_1" />
+	<item drawable="stan_alt_1" />
 	<item drawable="stealth_alt_1" />
 	<item drawable="stellio_alt_1" />
 	<item drawable="stockx_alt_1" />
