--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -12248,7 +12248,7 @@
 	<item component="ComponentInfo{pw.thedrhax.mosmetro/pw.thedrhax.mosmetro.activities.SettingsActivity}" drawable="mosmetro_wifi" />
 	<item component="ComponentInfo{com.moneysupermarket.phoenix/com.moneysupermarket.phoenix.SplashActivity}" drawable="moneysupermarket" />
 	<item component="ComponentInfo{com.altwork.liveuamap/com.altwork.liveuamap.MainActivity}" drawable="liveuamap" />
-	<item component="ComponentInfo{eu.toldi.infinityforlemmy/eu.toldi.infinityforlemmy.activities.MainActivity}" drawable="infinity_for_lemmy" />
+	<item component="ComponentInfo{eu.toldi.infinityforlemmy/eu.toldi.infinityforlemmy.activities.MainActivity}" drawable="eternity" />
 	<item component="ComponentInfo{dkc.video.hdbox/com.dkc.fs.ui.activities.SplashActivity}" drawable="hd_videobox" />
 	<item component="ComponentInfo{com.mobile5.greggs/com.greggs.customerApp.MainActivity}" drawable="greggs" />
 	<item component="ComponentInfo{com.mobile5.greggs/com.mobile5.greggs.section.splash.SplashActivity}" drawable="greggs" />
@@ -12739,4 +12739,6 @@
 	<item component="ComponentInfo{com.coleblvck.antiiq/com.ryanheise.audioservice.AudioServiceActivity}" drawable="antiiq" />
 	<item component="ComponentInfo{xyz.jmir.tachiyomi.mi.debug/eu.kanade.tachiyomi.ui.main.MainActivity}" drawable="aniyomi_preview" />
 	<item component="ComponentInfo{com.iternio.abrpapp/com.iternio.abrpapp.MainActivity}" drawable="a_better_routeplanner" />
+	<item component="ComponentInfo{eu.toldi.infinityforlemmy/eu.toldi.infinityforlemmy.OriginalIcon}" drawable="eternity_alt_1"/>
+	<item component="ComponentInfo{eu.toldi.infinityforlemmy/eu.toldi.infinityforlemmy.DefaultIcon}" drawable="eternity"/>
 </resources>
