--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -123,6 +123,7 @@
 	<item drawable="walp" />
 	<item drawable="waterydroid" />
 	<item drawable="wg_tunnel" />
+	<item drawable="eternity" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -251,6 +252,7 @@
 	<item drawable="edem_rf_alt_1" />
 	<item drawable="edem_rf_alt_2" />
 	<item drawable="elements_kwgt_alt_1" />
+	<item drawable="eternity_alt_1" />
 	<item drawable="exodus_alt_1" />
 	<item drawable="fancade_alt_1" />
 	<item drawable="fastic_alt_1" />
