Added Zoho OneAuth icon

--- a/app/src/main/res/xml/contributors.xml
+++ b/app/src/main/res/xml/contributors.xml
@@ -316,6 +316,11 @@
         image="https://avatars.githubusercontent.com/u/55149813"
         link="https://github.com/maddie-m" />
     <contributor
+        name="Rishi Kumar"
+        contribution="Icons"
+        image="https://avatars.githubusercontent.com/u/140878054"
+        link="https://rishikumars.com/" />
+    <contributor
         name="Arabi Ishaque"
         contribution="Testing"
         image=""
