reorganize Synology icons and add missing compinfo

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -7704,10 +7704,10 @@
 	<item component="ComponentInfo{com.synergygb.bnc/com.synergygb.bnc.MainActivity}" drawable="bank" />
 	<item component="ComponentInfo{com.synology.DScam/com.synology.DScam.activities.SplashActivity}" drawable="synology_ds_cam" />
 	<item component="ComponentInfo{com.synology.dschat/com.synology.dschat.ui.activity.SplashActivity}" drawable="synology_chat" />
-	<item component="ComponentInfo{com.synology.dscloud/com.synology.dscloud.activities.SplashActivity}" drawable="ds_cloud" />
+	<item component="ComponentInfo{com.synology.dscloud/com.synology.dscloud.activities.SplashActivity}" drawable="synology_ds_cloud" />
 	<item component="ComponentInfo{com.synology.dsdrive/com.synology.dsdrive.activity.SplashActivity}" drawable="synology_ds_drive" />
-	<item component="ComponentInfo{com.synology.DSfile/com.synology.DSfile.Splash}" drawable="ds_file" />
-	<item component="ComponentInfo{com.synology.dsnote/com.synology.dsnote.activities.SplashActivity}" drawable="synology_dsnote" />
+	<item component="ComponentInfo{com.synology.DSfile/com.synology.DSfile.Splash}" drawable="synology_ds_file" />
+	<item component="ComponentInfo{com.synology.dsnote/com.synology.dsnote.activities.SplashActivity}" drawable="synology_ds_note" />
 	<item component="ComponentInfo{com.synology.dsvideo/com.synology.dsvideo.SplashActivity}" drawable="synology_ds_video" />
 	<item component="ComponentInfo{com.synology.projectkailash/com.synology.projectkailash.ui.splash.SplashActivity}" drawable="synology_photos" />
 	<item component="ComponentInfo{com.synology.vpnplus/com.synology.vpnplus.activities.SplashActivity}" drawable="synology_vpn" />
