--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -3624,8 +3624,6 @@
 	<item drawable="drum_pad_machine" />
 	<item drawable="drum_pads_24" />
 	<item drawable="drupe" />
-	<item drawable="ds_cloud" />
-	<item drawable="ds_file" />
 	<item drawable="dsb" />
 	<item drawable="dsbmobile" />
 	<item drawable="dsign" />
@@ -8107,9 +8105,11 @@
 	<item drawable="syncthing" />
 	<item drawable="synology_chat" />
 	<item drawable="synology_ds_cam" />
+	<item drawable="synology_ds_cloud" />
 	<item drawable="synology_ds_drive" />
+	<item drawable="synology_ds_file" />
 	<item drawable="synology_ds_video" />
-	<item drawable="synology_dsnote" />
+	<item drawable="synology_ds_note" />
 	<item drawable="synology_photos" />
 	<item drawable="synology_vpn" />
 	<item drawable="synomanager" />
