--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -130,6 +130,7 @@
 	<item drawable="spinneys_uae" />
 	<item drawable="stan_alt_1" />
 	<item drawable="sun_life" />
+	<item drawable="swift__key" />
 	<item drawable="swipefy" />
 	<item drawable="takan" />
 	<item drawable="talenta" />
