Add thumbkey icon

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -12803,4 +12803,5 @@
 	<item component="ComponentInfo{pk.com.albaraka.mobileapp/com.avanza.ambitwizz.splash.SplashActivity}" drawable="al_baraka_bank" />
 	<item component="ComponentInfo{fr.gouv.agora/fr.social.gouv.agora.MainActivity}" drawable="agora" />
 	<item component="ComponentInfo{com.infinitech.ischolar/com.infinitech.ischolar.MainActivity}" drawable="agenda_ischolar" />
+	<item component="ComponentInfo{com.dessalines.thumbkey/com.dessalines.thumbkey.MainActivity}" drawable="thumbkey" />
 </resources>
