--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -183,6 +183,7 @@
 	<item drawable="wim_hof_method" />
 	<item drawable="yuzu_emulator" />
 	<item drawable="yuzu_emulator_early_access" />
+	<item drawable="thumbkey" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -8434,6 +8435,7 @@
 	<item drawable="threema_work" />
 	<item drawable="threes" />
 	<item drawable="thud" />
+	<item drawable="thumbkey" />
 	<item drawable="thumper" />
 	<item drawable="thunder" />
 	<item drawable="thunder_vpn" />
