rename George Cesko -> George Bank

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -12773,7 +12773,7 @@
 	<item component="ComponentInfo{net.binarymode.android.irplus/net.binarymode.android.irplus.MainTabbedActivity}" drawable="irplus" />
 	<item component="ComponentInfo{com.habitnow/com.habit.now.apps.activities.splashActivity.StartingActivity}" drawable="habitnow" />
 	<item component="ComponentInfo{com.gojek.gopay/com.gojek.gopay.MainActivity}" drawable="gopay" />
-	<item component="ComponentInfo{cz.csas.georgego/at.beeone.george.SplashScreenActivity}" drawable="george_cesko" />
+	<item component="ComponentInfo{cz.csas.georgego/at.beeone.george.SplashScreenActivity}" drawable="george_bank" />
 	<item component="ComponentInfo{org.futo.voiceinput/org.futo.voiceinput.settings.SettingsActivity}" drawable="futo_voice_input" />
 	<item component="ComponentInfo{ru.ftc.tc/io.flutter.embedding.android.FlutterFragmentActivity}" drawable="ftc" />
 	<item component="ComponentInfo{com.etisalat.flous/com.etisalat.flous.MainActivity}" drawable="etisalat_cash" />
