--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -49,7 +49,7 @@
 	<item drawable="futo_voice_input" />
 	<item drawable="gacha_life_2" />
 	<item drawable="geomag" />
-	<item drawable="george_cesko" />
+	<item drawable="george_bank" />
 	<item drawable="gms_flags" />
 	<item drawable="google_play_developer_console_alt_1" />
 	<item drawable="gopay" />
@@ -4362,7 +4362,7 @@
 	<item drawable="geometry_dash_meltdown" />
 	<item drawable="geometry_dash_subzero" />
 	<item drawable="geometry_dash_world" />
-	<item drawable="george_cesko" />
+	<item drawable="george_bank" />
 	<item drawable="german_dictionary" />
 	<item drawable="gesetze_jura" />
 	<item drawable="get_mobile" />
