Fix pixels icon linkage

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -12804,4 +12804,5 @@
 	<item component="ComponentInfo{fr.gouv.agora/fr.social.gouv.agora.MainActivity}" drawable="agora" />
 	<item component="ComponentInfo{com.infinitech.ischolar/com.infinitech.ischolar.MainActivity}" drawable="agenda_ischolar" />
 	<item component="ComponentInfo{com.dessalines.thumbkey/com.dessalines.thumbkey.MainActivity}" drawable="thumbkey" />
+	<item component="ComponentInfo{ar.teovogel.yip/ar.teovogel.yip.MainActivity}" drawable="pixels" />
 </resources>
