Update Tata Play icon

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -6358,7 +6358,7 @@
 	<item component="ComponentInfo{com.ryansteckler.nlpunbounce/com.ryansteckler.nlpunbounce.Settings-Alias}" drawable="amplify" />
 	<item component="ComponentInfo{com.ryzac.codecademygo/host.exp.exponent.MainActivity}" drawable="codecademy_go" />
 	<item component="ComponentInfo{com.ryzenrise.vaporcam/com.lightcone.nineties.activity.SplashActivity}" drawable="_90s" />
-	<item component="ComponentInfo{com.ryzmedia.tatasky/com.ryzmedia.tatasky.splash.SplashActivity}" drawable="tata_sky" />
+	<item component="ComponentInfo{com.ryzmedia.tatasky/com.ryzmedia.tatasky.splash.SplashActivity}" drawable="tata_play" />
 	<item component="ComponentInfo{com.s.antivirus/com.avast.android.mobilesecurity.app.main.MainActivity}" drawable="avg_antivirus" />
 	<item component="ComponentInfo{com.s4m/farabi.mobilebanking.ui.activity.SplashActivity}" drawable="bank" />
 	<item component="ComponentInfo{com.saavn.android/com.saavn.android.InitActivity}" drawable="saavn" />
