--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -4,6 +4,7 @@
 	<!--Please avoid automatically sorting categories to keep the current order in place-->
 
 	<category title="New" />
+	<item drawable="tata_play" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -790,6 +791,7 @@
 	<item drawable="tapet_wallpapers_alt_1" />
 	<item drawable="tapet_wallpapers_alt_2" />
 	<item drawable="taskito_alt_1" />
+	<item drawable="tata_play_alt_1" />
 	<item drawable="telegram_alt_1" />
 	<item drawable="texpand_alt_1" />
 	<item drawable="the_athletic_alt_1" />
@@ -8133,7 +8135,7 @@
 	<item drawable="tasty" />
 	<item drawable="tata_1mg" />
 	<item drawable="tata_cliq" />
-	<item drawable="tata_sky" />
+	<item drawable="tata_play" />
 	<item drawable="tattelecom_intercom" />
 	<item drawable="tattoodo" />
 	<item drawable="tautulli_remote" />
