--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -5,6 +5,7 @@
 
 	<category title="New" />
 	<item drawable="tata_play" />
+	<item drawable="dantotsu" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -110,6 +111,7 @@
 	<item drawable="contacts_alt_4" />
 	<item drawable="contacts_alt_5" />
 	<item drawable="crazy_taxi_alt_1" />
+	<item drawable="dantotsu_alt_1" />
 	<item drawable="dashchan_alt_1" />
 	<item drawable="dashlane_alt_1" />
 	<item drawable="delta_alt_1" />
