rename Image Resizer (Shrinker) -> Image Toolbox

--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -4784,7 +4784,7 @@
 	<item drawable="il_fatto_quotidiano" />
 	<item drawable="il_post" />
 	<item drawable="image_resizer" />
-	<item drawable="image_resizer_shrinker" />
+	<item drawable="image_toolbox" />
 	<item drawable="imagepipe" />
 	<item drawable="imagin" />
 	<item drawable="imaging_edge" />
