move Image Resizer to Image Toolbox Alt 1

--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -120,7 +120,7 @@
 	<item drawable="_10_bit_clock_widget_alt_1" />
 	<item drawable="abi_a_robots_tale_alt_1" />
 	<item drawable="ac__display_alt_1" />
-	<item drawable="ace_attorney_investigations_alt_1" /
+	<item drawable="ace_attorney_investigations_alt_1" />
 	<item drawable="action_launcher_alt_1" />
 	<item drawable="action_launcher_alt_2" />
 	<item drawable="addy_io_alt_1" />
@@ -307,6 +307,7 @@
 	<item drawable="hsmwmobil_alt_1" />
 	<item drawable="iceraven_alt_1" />
 	<item drawable="ikea_home_smart_alt_1" />
+	<item drawable="image_toolbox_alt_1" />
 	<item drawable="inbrowser_alt_1" />
 	<item drawable="indrive_alt_1" />
 	<item drawable="infinite_loop_alt_1" />
@@ -4783,7 +4784,6 @@
 	<item drawable="iko" />
 	<item drawable="il_fatto_quotidiano" />
 	<item drawable="il_post" />
-	<item drawable="image_resizer" />
 	<item drawable="image_toolbox" />
 	<item drawable="imagepipe" />
 	<item drawable="imagin" />
