Add new icons (#718)
* Add vector icons

* Add png icons

* Update drawable.xml

* Update drawable.xml

* Update appfilter.xml

* Update appfilter.xml

* Update drawable.xml

* Update appfilter.xml

* Update appfilter.xml

* Update appfilter.xml

* Update appfilter.xml

* Update appfilter.xml

* Update appfilter.xml

* fixes for Ace Attorney icons

* Update icons

* Update icons

* rename Image Resizer (Shrinker) -> Image Toolbox

* Update Icons

* move Image Resizer to Image Toolbox Alt 1

* remove stroke from Megafon Cleaner

---------

Co-authored-by: flameshikari <mail@hexed.pw>

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -10051,6 +10051,7 @@
 	<item component="ComponentInfo{jp.co.canon.android.printservice.plugin/jp.co.canon.android.printservice.plugin.WalkThroughActivity}" drawable="printer" />
 	<item component="ComponentInfo{jp.co.canon.bsd.ad.pixmaprint/jp.co.canon.bsd.ad.pixmaprint.EulaActivity}" drawable="printer" />
 	<item component="ComponentInfo{jp.co.canon.ic.cameraconnect/jp.co.canon.ic.cameraconnect.top.CCTopActivity}" drawable="canon_camera_connect" />
+	<item component="ComponentInfo{jp.co.capcom.kenji1en/app.APPActivity}" drawable="ace_attorney_investigations"/>
 	<item component="ComponentInfo{jp.co.casio.fx.CasioEduPlus/jp.co.casio.fx.CasioEduPlus.SplashActivity}" drawable="casio_edu" />
 	<item component="ComponentInfo{jp.co.celsys.clipstudiopaint.galaxystore/com.celsys.pwlegacyandroidhelpers.PWLegacyJniCustomNativeActivityAndroid}" drawable="clip_studio_paint" />
 	<item component="ComponentInfo{jp.co.celsys.clipstudiopaint.googleplay/com.celsys.pwlegacyandroidhelpers.PWLegacyJniCustomNativeActivityAndroid}" drawable="clip_studio_paint" />
@@ -11312,6 +11313,7 @@
 	<item component="ComponentInfo{ru.bespoyasov.tzlvt/ru.bespoyasov.tzlvt.ui.activity.MainActivity}" drawable="tzlvt" />
 	<item component="ComponentInfo{ru.bhastbhq.xfpgxcytu/ru.bhastbhq.xfpgxcytu.MainActivity1}" drawable="lucky_patcher" />
 	<item component="ComponentInfo{ru.bkeptiut.ixbtvzvne/ru.bkeptiut.ixbtvzvne.MainActivity7}" drawable="lucky_patcher" />
+	<item component="ComponentInfo{ru.bluecat.megafoncleaner/ru.bluecat.megafoncleaner.Home}" drawable="megafon_cleaner"/>
 	<item component="ComponentInfo{ru.boloid.giszkh2/ru.boloid.giszkh2dev.activities.SplashActivity}" drawable="gis_zkh" />
 	<item component="ComponentInfo{ru.bpc.mobilebank.bpc/android.svat.bpcbt.com.modulesplash.SplashActivity}" drawable="bank" />
 	<item component="ComponentInfo{ru.bspb/ru.bspb.MainActivity}" drawable="bspb" />
@@ -11458,8 +11460,9 @@
 	<item component="ComponentInfo{ru.subprogram.guitarsongs.vint/ru.subprogram.guitarsongs.activities.dbinit.DbInitActivity}" drawable="guitar_songs" />
 	<item component="ComponentInfo{ru.svyaznoy.travel.app/ru.svyaznoy.travel.app.MainActivity}" drawable="svyaznoi_travel" />
 	<item component="ComponentInfo{ru.sxbuIDfx.pFSOyagrF/ru.sxbuIDfx.pFSOyagrF.MainActivity1}" drawable="lucky_patcher" />
-	<item component="ComponentInfo{ru.tech.imageresizershrinker/ru.tech.imageresizershrinker.main_screen.MainActivity}" drawable="image_resizer_shrinker" />
-	<item component="ComponentInfo{ru.tech.imageresizershrinker/ru.tech.imageresizershrinker.MainActivity}" drawable="image_resizer" />
+	<item component="ComponentInfo{ru.tech.imageresizershrinker/ru.tech.imageresizershrinker.main_screen.MainActivity}" drawable="image_toolbox" />
+	<item component="ComponentInfo{ru.tech.imageresizershrinker/ru.tech.imageresizershrinker.MainActivity}" drawable="image_toolbox" />
+	<item component="ComponentInfo{ru.tech.imageresizershrinker/ru.tech.imageresizershrinker.presentation.main_screen.MainActivity}" drawable="image_toolbox" />
 	<item component="ComponentInfo{ru.tele2.mytele2/ru.tele2.mytele2.ui.splash.SplashActivity}" drawable="my_tele2" />
 	<item component="ComponentInfo{ru.ticketmanager.traktor/crc64a7c86e46ca280763.MainActivity}" drawable="hc_traktor" />
 	<item component="ComponentInfo{ru.timekillers.plaidy/ru.timekillers.plaidy.activities.StartupActivity}" drawable="plaidy" />
@@ -12372,6 +12375,7 @@
 	<item component="ComponentInfo{team.opay.pay.egypt/team.opay.pay.egypt.module.home.EgyptSplashScreen}" drawable="opay" />
 	<item component="ComponentInfo{com.hhyu.neuron/com.neuron.business.ui.account.login.UnregisteredHomeActivity}" drawable="neuron" />
 	<item component="ComponentInfo{software.simplicial.nebulous/software.simplicial.nebulous.application.MainActivity}" drawable="nebulous_io" />
+	<item component="ComponentInfo{com.ofalvai.habittracker/com.ofalvai.habittracker.ui.MainActivity}" drawable="habit_builder"/>
 	<item component="ComponentInfo{com.ofss.obdx.and.nbe.com.eg/com.ofss.digx.mobile.android.SplashActivity}" drawable="nbe_mobile" />
 	<item component="ComponentInfo{xyz.nextalone.nnngram/org.telegram.messenger.DefaultIcon}" drawable="nagram" />
 	<item component="ComponentInfo{com.kwasow.musekit/com.kwasow.musekit.MainActivity}" drawable="musekit" />
