--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -4,6 +4,7 @@
 	<!--Please avoid automatically sorting categories to keep the current order in place-->
 
 	<category title="New" />
+	<item drawable="ace_attorney_investigations" />
 	<item drawable="adb_otg" />
 	<item drawable="alkaa" />
 	<item drawable="allowance" />
@@ -48,6 +49,7 @@
 	<item drawable="gidget" />
 	<item drawable="goibibo" />
 	<item drawable="graded" />
+	<item drawable="habit_builder" />
 	<item drawable="halfdot" />
 	<item drawable="hejtter" />
 	<item drawable="hz_refresher" />
@@ -70,6 +72,7 @@
 	<item drawable="mauth" />
 	<item drawable="mc_bank" />
 	<item drawable="meditation_timer_log" />
+	<item drawable="megafon_cleaner" />
 	<item drawable="miccheck" />
 	<item drawable="minimal_watch_faces" />
 	<item drawable="mint_calculator" />
@@ -117,6 +120,7 @@
 	<item drawable="_10_bit_clock_widget_alt_1" />
 	<item drawable="abi_a_robots_tale_alt_1" />
 	<item drawable="ac__display_alt_1" />
+	<item drawable="ace_attorney_investigations_alt_1" />
 	<item drawable="action_launcher_alt_1" />
 	<item drawable="action_launcher_alt_2" />
 	<item drawable="addy_io_alt_1" />
@@ -303,6 +307,7 @@
 	<item drawable="hsmwmobil_alt_1" />
 	<item drawable="iceraven_alt_1" />
 	<item drawable="ikea_home_smart_alt_1" />
+	<item drawable="image_toolbox_alt_1" />
 	<item drawable="inbrowser_alt_1" />
 	<item drawable="indrive_alt_1" />
 	<item drawable="infinite_loop_alt_1" />
@@ -1774,6 +1779,7 @@
 	<item drawable="accupedo_pedometer" />
 	<item drawable="accuradio" />
 	<item drawable="accurate" />
+	<item drawable="ace_attorney_investigations" />
 	<item drawable="ace_stream_engine" />
 	<item drawable="ace_stream_media" />
 	<item drawable="acesso" />
@@ -4499,6 +4505,7 @@
 	<category title="H" />
 	<item drawable="h_and_m" />
 	<item drawable="habit_browser" />
+	<item drawable="habit_builder" />
 	<item drawable="habit_tracker" />
 	<item drawable="habithub" />
 	<item drawable="habitica" />
@@ -4777,8 +4784,7 @@
 	<item drawable="iko" />
 	<item drawable="il_fatto_quotidiano" />
 	<item drawable="il_post" />
-	<item drawable="image_resizer" />
-	<item drawable="image_resizer_shrinker" />
+	<item drawable="image_toolbox" />
 	<item drawable="imagepipe" />
 	<item drawable="imagin" />
 	<item drawable="imaging_edge" />
@@ -5613,6 +5619,7 @@
 	<item drawable="mega" />
 	<item drawable="mega_curioso" />
 	<item drawable="megafon" />
+	<item drawable="megafon_cleaner" />
 	<item drawable="megafon_collecto" />
 	<item drawable="megalodon" />
 	<item drawable="megazeux" />
