new icon: Kinopoisk (previous one moved to Alt 1)

--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -113,6 +113,7 @@
 	<item drawable="xiaomi_service" />
 	<item drawable="zcalc" />
 	<item drawable="zcard" />
+	<item drawable="kinopoisk" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -331,6 +332,7 @@
 	<item drawable="k_nine_mail_alt_1" />
 	<item drawable="khan_academy_alt_1" />
 	<item drawable="kijiji_alt_1" />
+	<item drawable="kinopoisk_alt_1" />
 	<item drawable="lazada_alt_1" />
 	<item drawable="lazada_alt_2" />
 	<item drawable="lcl_mes_comptes_alt_1" />
