--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -114,6 +114,7 @@
 	<item drawable="zcalc" />
 	<item drawable="zcard" />
 	<item drawable="kinopoisk" />
+	<item drawable="yandex_mail" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -1012,6 +1013,7 @@
 	<item drawable="xda_labs_alt_1" />
 	<item drawable="xender_alt_1" />
 	<item drawable="xposed_installer_alt_1" />
+	<item drawable="yandex_mail_alt_1" />
 	<item drawable="yatse_alt_1" />
 	<item drawable="youtube_alt_1" />
 	<item drawable="youtube_gaming_alt_1" />
