--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -744,7 +744,6 @@
 	<item component="ComponentInfo{com.adguard.android.contentblocker/com.adguard.android.contentblocker.MainActivity}" drawable="adguard" />
 	<item component="ComponentInfo{com.adguard.android.contentblocker/com.adguard.android.contentblocker.ui.MainActivity}" drawable="adguard" />
 	<item component="ComponentInfo{com.adguard.android/com.adguard.android.ui.MainActivity}" drawable="adguard" />
-	<item component="ComponentInfo{com.adguard.android/com.adguard.android.ui.SplashActivity/com.adguard.android.ui.MainActivity}" drawable="adguard" />
 	<item component="ComponentInfo{com.adguard.android/com.adguard.android.ui.SplashActivity}" drawable="adguard" />
 	<item component="ComponentInfo{com.adguard.vpn/com.adguard.vpn.ui.SplashActivity}" drawable="adguard_vpn" />
 	<item component="ComponentInfo{com.adidas.app/com.adidas.intro.IntroActivity}" drawable="adidas" />
@@ -11368,8 +11367,8 @@
 	<item component="ComponentInfo{ru.jqqhzvur.pwptcfoux/ru.jqqhzvur.pwptcfoux.MainActivity1}" drawable="lucky_patcher" />
 	<item component="ComponentInfo{ru.kfc.kfc_delivery/com.kfc.MainActivity}" drawable="kfc" />
 	<item component="ComponentInfo{ru.kfc.kfc_delivery/com.kfc.ui.activities.NativeModuleActivity}" drawable="kfc" />
-	<item component="ComponentInfo{ru.kinopoisk/ru.kinopoisk.IconBabina}" drawable="kinopoisk" />
-	<item component="ComponentInfo{ru.kinopoisk/ru.kinopoisk.IconOld}" drawable="kinopoisk" />
+	<item component="ComponentInfo{ru.kinopoisk/ru.kinopoisk.IconBabina}" drawable="kinopoisk_alt_1" />
+	<item component="ComponentInfo{ru.kinopoisk/ru.kinopoisk.IconOld}" drawable="kinopoisk_alt_1" />
 	<item component="ComponentInfo{ru.kinopoisk/ru.kinopoisk.presentation.screen.main.MainActivity}" drawable="kinopoisk" />
 	<item component="ComponentInfo{ru.kinopoisk/ru.kinopoisk.presentation.screen.tabs.RedirectTabsIntentsActivity}" drawable="kinopoisk" />
 	<item component="ComponentInfo{ru.ktktelecom.volnamobile/crc6495fc1e4cbef27f7a.SplashActivity}" drawable="volna_mobile" />
