--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -113,6 +113,9 @@
 	<item drawable="xiaomi_service" />
 	<item drawable="zcalc" />
 	<item drawable="zcard" />
+	<item drawable="kinopoisk" />
+	<item drawable="yandex_keyboard" />
+	<item drawable="yandex_mail" />
 
 	<category title="Alts" />
 	<item drawable="_1password_alt_1" />
@@ -331,6 +334,7 @@
 	<item drawable="k_nine_mail_alt_1" />
 	<item drawable="khan_academy_alt_1" />
 	<item drawable="kijiji_alt_1" />
+	<item drawable="kinopoisk_alt_1" />
 	<item drawable="lazada_alt_1" />
 	<item drawable="lazada_alt_2" />
 	<item drawable="lcl_mes_comptes_alt_1" />
@@ -1010,6 +1014,8 @@
 	<item drawable="xda_labs_alt_1" />
 	<item drawable="xender_alt_1" />
 	<item drawable="xposed_installer_alt_1" />
+	<item drawable="yandex_keyboard_alt_1" />
+	<item drawable="yandex_mail_alt_1" />
 	<item drawable="yatse_alt_1" />
 	<item drawable="youtube_alt_1" />
 	<item drawable="youtube_gaming_alt_1" />
