--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -34,6 +34,7 @@
 	<item drawable="cythara" />
 	<item drawable="dantotsu" />
 	<item drawable="dealshare" />
+	<item drawable="deezer" />
 	<item drawable="dimett" />
 	<item drawable="dreamdroid" />
 	<item drawable="droid_hole" />
