new icon for TELE2 Swedish and renaming similar icons

--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -6062,7 +6062,6 @@
 	<item drawable="my_singing_monsters" />
 	<item drawable="my_smart_home" />
 	<item drawable="my_subaru" />
-	<item drawable="my_tele2" />
 	<item drawable="my_telstra" />
 	<item drawable="my_therapy" />
 	<item drawable="my_total_by_verizon" />
@@ -8383,8 +8382,8 @@
 	<item drawable="ted" />
 	<item drawable="telcel" />
 	<item drawable="telda" />
-	<item drawable="tele2" />
-	<item drawable="tele2_my" />
+	<item drawable="tele2_kz" />
+	<item drawable="tele2_ru" />
 	<item drawable="tele_quebec" />
 	<item drawable="telegraher" />
 	<item drawable="telegram" />
