--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -11462,7 +11462,7 @@
 	<item component="ComponentInfo{ru.tech.imageresizershrinker/ru.tech.imageresizershrinker.main_screen.MainActivity}" drawable="image_toolbox" />
 	<item component="ComponentInfo{ru.tech.imageresizershrinker/ru.tech.imageresizershrinker.MainActivity}" drawable="image_toolbox" />
 	<item component="ComponentInfo{ru.tech.imageresizershrinker/ru.tech.imageresizershrinker.presentation.main_screen.MainActivity}" drawable="image_toolbox" />
-	<item component="ComponentInfo{ru.tele2.mytele2/ru.tele2.mytele2.ui.splash.SplashActivity}" drawable="my_tele2" />
+	<item component="ComponentInfo{ru.tele2.mytele2/ru.tele2.mytele2.ui.splash.SplashActivity}" drawable="tele2_my" />
 	<item component="ComponentInfo{ru.ticketmanager.traktor/crc64a7c86e46ca280763.MainActivity}" drawable="hc_traktor" />
 	<item component="ComponentInfo{ru.timekillers.plaidy/ru.timekillers.plaidy.activities.StartupActivity}" drawable="plaidy" />
 	<item component="ComponentInfo{ru.tinkoff.invest.course/ru.tinkoff.journal.invest.ui.activities.SplashScreenActivity}" drawable="tinkoff_invest_course" />
@@ -12746,8 +12746,8 @@
 	<item component="ComponentInfo{org.yuzu.yuzu_emu/org.yuzu.yuzu_emu.ui.main.MainActivity}" drawable="yuzu_emulator" />
 	<item component="ComponentInfo{nl.deckeron.apps.innerfire/nl.deckeron.apps.innerfire.ActivityEntry}" drawable="wim_hof_method" />
 	<item component="ComponentInfo{com.vector123.whiteborder/com.vector123.blank.activity.HomeActivity}" drawable="white_border" />
-	<item component="ComponentInfo{ru.tele2.mytele2/ru.tele2.mytele2.ui.splash.SplashActivity}" drawable="tele2_my" />
-	<item component="ComponentInfo{kz.tele2.app/kz.sardarpro.tele2.ui.launcher.LauncherActivity}" drawable="tele2" />
+	<item component="ComponentInfo{ru.tele2.mytele2/ru.tele2.mytele2.ui.splash.SplashActivity}" drawable="tele2_ru" />
+	<item component="ComponentInfo{kz.tele2.app/kz.sardarpro.tele2.ui.launcher.LauncherActivity}" drawable="tele2_kz" />
 	<item component="ComponentInfo{com.synology.DScam/com.synology.dscam.activities.SplashActivity}" drawable="synology_ds_cam" />
 	<item component="ComponentInfo{com.speedway.mobile/com.speedway.mobile.base.SplashActivity}" drawable="speedway" />
 	<item component="ComponentInfo{com.github.soulsearching/com.github.soulsearching.MainActivity}" drawable="soul_searching" />
