Fix My Boost Mobile icon linkage

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -12937,4 +12937,5 @@
 	<item component="ComponentInfo{com.budget.allowance/com.budget.allowance.MainActivity}" drawable="allowance" />
 	<item component="ComponentInfo{com.escodro.alkaa/com.escodro.alkaa.presentation.MainActivity}" drawable="alkaa" />
 	<item component="ComponentInfo{com.htetznaing.adbotg/com.htetznaing.adbotg.MainActivity}" drawable="adb_otg" />
+	<item component="ComponentInfo{com.boost.mobile.myboost/com.telstra.mobile.android.mytelstra.activities.SplashActivity}" drawable="my_boost_mobile" />
 </resources>
